20100211 mnemogogo-1.0.1
* Bugfixes to Android client library.
* Remove encoding requests to support IBM Java VM on Palm.

20100124 mnemogogo-1.0.0
* PRODUCTION RELEASE
* Add more meaningful exception messages for when problems occur
  in parsing CONFIG.
* Fix a minor problem in the tracking of future schedules.
* Provide a better error message for when the synchronization path
  is not set at all.
* Improve Mnemogogo error messages at startup and during export.
* No longer lock the preview window in remote mode.
* Add maximum image parameters to the config panel and simplify the
  list of interfaces: just one entry for Mnemojojo and a new entry for
  Mnemododo.
* Image manipulation now uses qt library functions and there is no longer a
  dependency on the Python Imaging Library (PIL)
* Fix a subtle bug in the initialization of Job and Export classes
  (it only affected repeated exports during a single Mnemosyne session in a
   minor way).
* Adapt the mnemogogo/mobile/hexcsv library for Android.
* Warn when errors are logged to log.txt.

20091220 mnemogogo-0.9.10
* Fix a bug in start_date handling that caused shifted statistics at
  each import after changing timezone (thanks to Mackan Svensson for
  bug report.)
  IMPORTANT: export format changes require Mnemojojo 0.9.6 or above!
* Really fix QString + str error on invalid plugin under Windows
  (patch from Bernhard Blum).
* Warnings to Mnemosyne log.txt (not to stderr)
* Changes to allow for manual directory browsing.

20091113 mnemogogo-0.9.9
* Add keyboard shortcut to start Mnemogogo (suggested by Bernhard Blum).
* Try to fix QString + str error on invalid plugin under Windows
  (reported by Bernhard Blum).

20091101 mnemogogo-0.9.8
* Do not convert xml entities to unicode during export.

20091031 mnemogogo-0.9.7
* Change names to `Mnemogogo' and `Mnemojojo' throughout.
* Fix some problems with PIL under Windows (thanks to Bernhard Blum).
* Replace magic number `43' with `jojo_title_height_pixels'